<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainContainerPadding">

    <android.support.v7.widget.CardView
        android:id="@+id/cvProject"
        style="@style/CardView.Light">

        <RelativeLayout style="@style/CardViewContainer">

            <ImageView
                android:id="@+id/ivProject"
                android:src="@drawable/logo"
                style="@style/CardViewProjectImagen" />

            <TextView
                android:id="@+id/tvNombreClientePedido"
                style="@style/CardViewProjectTitle" />

            <TextView
                android:id="@+id/tvRucPedido"
                android:layout_below="@+id/tvNombreClientePedido"
                style="@style/CardViewProjectDetail" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/Order_condition"
                style="@style/TextView"/>

            <Spinner
                android:id="@+id/spCondicionPago"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:textSize="30px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Order_date"
                android:gravity="left"
                style="@style/TextView"/>



            <TextView
                android:id="@+id/tvFechaPedido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/AppThemecolorAccent"
                style="@style/TextView" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Order_detail"
            android:textColor="@color/TextView"
            android:textSize="@dimen/TitleTextViewtextSize" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btagregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:clickable="true"
            android:src="@drawable/ic_add_white_18dp"
            app:backgroundTint="@color/backgroundTint" />
    </LinearLayout>


    <LinearLayout style="@style/ContainerTitle">

        <TextView
            style="@style/Title"
            android:layout_weight="2"
            android:text="@string/Order_code" />

        <TextView
            style="@style/Title"
            android:layout_weight="4"
            android:text="@string/Order_product" />

        <TextView
            style="@style/Title"
            android:layout_weight="1"
            android:text="@string/Order_unit" />

        <TextView
            style="@style/Title"
            android:layout_weight="2"
            android:text="@string/Order_amount" />

        <TextView
            style="@style/Title"
            android:layout_weight="2"
            android:text="@string/Order_price" />

        <TextView
            style="@style/Title"
            android:layout_weight="2"
            android:text="@string/Order_sub_total" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvDetallePedido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="TextSizePedidoTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Order_total" />

        <TextView
            android:id="@+id/tvTotal"
            style="TextSizePedidoTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btGrabarPedido"
            style="@style/Buttom"
            android:text="Grabar" />

    </LinearLayout>


</LinearLayout>


